[package]
name = "ledger_api"
version = "0.1.0"
authors = ["bdrew"]
edition = "2018"
description="API for the ledger service"
readme="README.md"
repository="https://github.com/bentondrew/coin_and_purse_ledger_api"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
